static/css/base.css
/* ... */
.form-container {
    width: 40%;
    margin: 0 auto;
}

.form-img{
    width: 300px;
    border-radius: 15px;
    object-fit: cover;

}

.form-control-file {
    padding:10px 0px 10px 0px !important;
}

.sign-out-container {
    
        background-color: var(--primary-bg-color);
        padding: 20px;
        border-radius: 5px;
    
}

/* Donate section */

.donation-amount-box {
    background-color: var(--primary-bg-color);
    border: 2px solid #28a745;
    max-width: 500px;
    margin: 0 auto;
}

tbody {
 background-color: var(--primary-bg-color);
}

.donate-section {
    background-color: var(--primary-bg-color);
    flex-wrap: wrap;
    gap: 10px;
    padding: 40px;
    box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.2)
}
.donation-section {
    margin-top: 20px;
}

.donation-amount-box {
    background-color: var(--primary-bg-color);
    border: 2px solid #28a745;
    max-width: 300px;
    margin: 0 auto;
}

.donation-image {
    max-width: 300px !important;
    margin-bottom: 30px;
}





/*  Media queries  */


    @media (min-width: 1200px) {
     /* Large screens, large desktop styles */
        
        .container {
            max-width: 80%;
        }

        .navbar-collapse {
            display: flex; 
            justify-content: space-between;
            width: 100%;
        }
    
        .navbar-nav {
            display: flex;
            justify-content: center;
            gap: 20px;
            flex-wrap: nowrap;
        }
    
        .navbar-nav .nav-link {
            white-space: nowrap;
        }
    
        .logo {
            max-height: 120px; 
        }
    
        .form-container {
            width: 70%;
            padding: 30px;
            margin: 0 auto;
        }
    
        .carousel-inner img {
            max-width: 150px; 
            height: 150px;
        }
    
        .carousel-control-prev, .carousel-control-next {
            top: 15%;
        }
       
        .donate-section {
            width: 60%;
            margin: 0 auto;
        }
       
    }




@media only screen and (min-width: 992px) and (max-width: 1200px) {  
    /* Tablet + Desktop (Small to Medium) */
    .navbar-collapse {
        display: flex; 
        justify-content: space-between;
        flex-wrap: wrap; 
        width: 100%;
        padding: 0;
        
    }

      .dropdown-menu {
        position: absolute;
        top: 100%; 
        right: 0; 
        left: auto;
      }

    .navbar-nav {
        display: flex;
        justify-content: center;
        flex-wrap: wrap; 
    }

    .navbar-nav .nav-item {
        display: block;
        justify-content: center;
    }

    .navbar-nav .nav-link {
        white-space: nowrap;
    }

    
    .form-container {
        width: 70%;
        padding: 20px;
        margin: 0 auto;
    }


   
}



@media only screen and (min-width: 768px) and (max-width: 992px) {
    
       
        .form-container {
            width: 70%;
        }

        .navbar-collapse {
            position: absolute;
            top: 80px;
            right: 0;
            height: auto;  
            width: 250px;  
            background-color: var(--primary-bg-color); 
            box-shadow: -4px 0px 10px rgba(0, 0, 0, 0.1); 
            display: none; 
            transition: transform 0.3s ease-in-out; 
        }
    
    
        .navbar-collapse.show {
            display: block; 
            transform: translateX(0); 
        }
    
       
        .navbar-toggler {
            position: absolute;
            right: 10px; 
        }
        
        .dropdown-menu {
            background-color: var(--primary-bg-color) !important;
            border:  none !important;
            border-radius: none !important;
           }
     
        .close-btn {
            position: absolute; 
            right: 10px; 
            background: none;
            border: none;
            font-size: 30px;  
            color: #333;  
            cursor: pointer;
            top: -13px;
        }
    
        .close-btn:hover {
            color: #555; 
        }
}



@media only screen and (max-width: 768px) {  

    body, html {
        overflow: auto;
        max-height: 100% !important;
    }

    .navbar-collapse {
        position: absolute;
        top: 80px;
        right: 0;
        height: auto;  
        width: 250px;  
        background-color: var(--primary-bg-color); 
        box-shadow: -4px 0px 10px rgba(0, 0, 0, 0.1); 
        display: none; 
        transition: transform 0.3s ease-in-out; 
    }


    .navbar-collapse.show {
        display: block; 
        transform: translateX(0); 
    }

   
    .navbar-toggler {
        position: absolute;
        right: 10px; 
    }

 
    .close-btn {
        position: absolute; 
        right: 10px; 
        background: none;
        border: none;
        font-size: 30px;  
        color: #333;  
        cursor: pointer;
        top: -13px;
    }

    .close-btn:hover {
        color: #555; 
    }
    .logo {
        max-height: 100px; 

    }
    
    

    .form-width {
        width: 100%;
    }
    .form-container {
        width: 100%;
    }

    #home-bg {
        background-position: center right;
    }


    .donation-image {
        width: 80%;
        
    }

    .donate-section {
        padding: 20px;
    }
  
    .carousel-control-next, .carousel-control-prev {
        top: 10%;
    }

    .carousel-inner img {
        max-width: 120px; 
        height: 120px;
    }

    .carousel-inner .col-md-4 {
        margin-left: 0;
    }
    
    .flex-custom {
        gap: 5px;
        flex-wrap: wrap !important;
    }
    
    .navbar-nav {
        margin-left: 0;
    }
    
   
    .dropdown-menu {
     background-color: var(--primary-bg-color) !important;
     border:  none !important;
     border-radius: none !important;
    }
}

